--- a/collation_app/pubspec.yaml
+++ b/collation_app/pubspec.yaml
@@ -29,11 +29,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.0.3
+  http: ^0.13.4
+  web_socket_channel: ^2.2.0
+  web3dart: 
 
 dev_dependencies:
   flutter_test:
